src/index.scss
/* ... */
.skills{
    display: grid;
    place-items: center;
    color:white;
    padding: 4rem 0 4rem 0;
    background: url('pattern-rings.svg') no-repeat left 50vw bottom;

    @media screen and (min-width: 768px) {
        background: url('pattern-rings.svg') no-repeat left 70vw bottom;
    }

    @media screen and (min-width: 1440px) {
        background: none;
        padding: 104px 0 4rem 0;
        max-width: 1110px;
        width: 100%;
    }


    .skills-inner{
        width: 80%;
        text-align: center;
        display: grid;
        row-gap: 1rem;
        padding: 2rem 1rem 2rem 1rem;
        
        border-top: 1px solid white;
        border-bottom: 1px solid white;
        
        @media screen and (min-width: 768px) {
            width: 90%;
            grid-template-columns:  1fr 1fr;
            grid-auto-rows: auto;
            border-bottom: none;
            text-align: start;
        }

        @media screen and (min-width: 1440px) {
            padding: 4rem 1rem 2rem 1rem;
            width: 100%;
            gap: 4rem;
            grid-template-columns:  1fr 1fr 1fr;

        }

        div{
            h2{
                font-size: 1.75rem;
                font-family: $med;
                letter-spacing: -1.5px;

                @media screen and (min-width: 768px) {
                    font-size: 48px;
                }
                
            }
            p{
                color: $dirtywhite;
                font-family: $med;

                @media screen and (min-width: 768px) {
                    font-size: 18px;
                }
            }
        }
    }
}

.project{
    color: white;
    padding: 2rem;
    display: grid;
    row-gap: 2rem;

    @media screen and (min-width: 768px) {
        grid-template-columns: 1fr 1fr;
        column-gap: 2rem;
    }

    @media screen and (min-width: 1440px) {
        padding: 2rem 0 2rem 0;
        max-width: 1110px;
        width: 100%;
    }

    .project-header{
        display:flex;
        justify-content: space-between;
        align-items: end;

        @media screen and (min-width: 768px) {
            grid-column: 1/3;
            
        }


        h2{
            @media screen and (min-width: 768px) {
                font-size: 72px;
            }
        }

        button{
            padding: 0 0 6px 0;
            background: none;
            border:none;
            color: inherit;
            border-bottom: 3px solid $green;
            letter-spacing: 2px;
            font-family: $light;

            @media screen and (min-width: 768px) {
                align-self: center;
                font-size: 20px;
            }
        }

        button:hover{
            color: $green;
        }
        
    }

    @keyframes fade {
        0% { opacity: 0 }
        50% { opacity: .5 }
        100%{opacity: 1}
      }

    .project-container:hover > .buttons{
        display:flex;
        
        animation: fade .5s linear both;
    }

    .project-container:hover > img{
        filter: brightness(50%);
        cursor: pointer;
    }
    .project-container{
        display: grid;
        row-gap: 1rem;

        img{
            transition: filter .2s ease;
        }

      

        @media screen and (min-width: 1440px) {
            position: relative;
        } 

        h3{
            font-size: 1.35rem;
        }
        .skills-used{
            color: $dirtywhite;
            display: flex;
            column-gap: 1rem;
        }

        .buttons{
            display: flex;
            column-gap: 1rem;
            row-gap: 1rem;
            

            .view{
                padding:0 0 6px 0;
                letter-spacing: 2px;
                color:white;
                background:none;
                border:none;
                border-bottom: 3px solid $green;
                text-decoration: none;

                @media screen and (min-width: 1440px) {
                    width: max-content;
                }
            }

            .view:hover{
                color: $green;
            }

            @media screen and (min-width: 1440px) {
                position: absolute;
                flex-direction: column;
                justify-self: center;
                align-items: center;
                margin-top:30%;
                display: none;
                opacity: 1;
            }
        }
    }
}
/* ... */

